스플링부트 시큐리티 페이스북 로그인

--- a/security1/src/main/resources/application.yml
+++ b/security1/src/main/resources/application.yml
@@ -32,5 +32,9 @@ spring:
             - email
             - profile
             
-        
-        
+  facebook:
+    client-id:
+    client-secret:
+    scope:
+    - email
+    - profile
