--- a/security1/src/main/resources/application.yml
+++ b/security1/src/main/resources/application.yml
@@ -37,4 +37,24 @@ spring:
     client-secret:
     scope:
     - email
-    - profile
+    - public profile
+    
+    
+    naver:
+     client-id:5fdPgZKsbRa_rJKsOSg0
+     client-secret:5fdPgZKsbRa_rJKsOSg0
+     scope:
+     -name
+     -email
+     client-name:Naver
+     authorization-grant-type:authorization_code
+     redirect-uri:http://localhost:8080/login/oauth2/code/naver
+   
+     provider:
+      naver:
+       authorization-uri:https://nid.naver.com/ouath2.0/authorze
+       token-uri:https://nid.naver.com/oauth2.0/token
+       user-info-uri:https://openapi.naver.com/v1/nid/me
+       user-name-attribute:resposne 
+       
+       
