스프링 부트 시큐리티 복습

--- a/security1/src/main/resources/application.yml
+++ b/security1/src/main/resources/application.yml
@@ -41,8 +41,8 @@ spring:
     
     
     naver:
-     client-id:5fdPgZKsbRa_rJKsOSg0
-     client-secret:5fdPgZKsbRa_rJKsOSg0
+     client-id:htghxb0Uip50vz6twKLC
+     client-secret:MJRTzZ2D5D
      scope:
      -name
      -email
