--- a/security/src/main/resources/application.yml
+++ b/security/src/main/resources/application.yml
@@ -32,3 +32,20 @@ spring:
             scope:
             - email
             - profile
+
+            
+  naver:
+     client-id:htghxb0Uip50vz6twKLC
+     client-secret:MJRTzZ2D5D
+     scope:-name
+     -email
+     client-name:Naver
+     authorization-grant-type:authorization_code
+     redirect-uri:http://localhost:8080/login/oauth2/code/naver
+   
+     provider:
+      naver:
+       authorization-uri:https://nid.naver.com/ouath2.0/authorze
+       token-uri:https://nid.naver.com/oauth2.0/token
+       user-info-uri:https://openapi.naver.com/v1/nid/me
+       user-name-attribute:resposne #회원정보를 JSON으로 받은데 RESPONSE라는 키값으로 네이버를 리턴해줌
