스프링부트 jwt

--- a/jwt-server/src/main/resources/application.yml
+++ b/jwt-server/src/main/resources/application.yml
@@ -11,9 +11,9 @@ server:
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/security?serverTimezone=Asia/Seoul
-    username: sol
-    password: sol1234
+    url: jdbc:mysql://localhost:3306/securityJwt?serverTimezone=Asia/Seoul
+    username: sol-jwt
+    password: sol-jwt1234
 
   jpa:
     hibernate:
